--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
       margin: 10px auto;
       max-width: 600px;
       box-shadow: 2px 2px 8px rgba(255, 105, 180, 0.3);
+      display: flex;
+      align-items: center;
+      gap: 15px;
     }
     .menu-item img {
       width: 100px;
       border-radius: 10px;
-      margin-right: 15px;
-      vertical-align: middle;
     }
     .menu-item span {
-      vertical-align: middle;
       font-size: 1.3em;
       font-weight: bold;
       color: #c71585;
@@ -91,6 +91,12 @@
       padding: 12px;
       font-size: 0.9em;
       margin-top: 40px;
+    }
+    form input, form textarea {
+      font-family: inherit;
+      font-size: 1em;
+      border: 2px solid #ff69b4;
+      border-radius: 6px;
     }
   </style>
 </head>
@@ -112,7 +118,7 @@
 
   <section id="home">
     <img
-      src="https://cdn.pixabay.com/photo/2016/03/31/18/55/cooking-1296206_960_720.png"
+      src="https://cdn.pixabay.com/photo/2016/03/31/18/55/cooking-1296206_1280.png"
       alt="Cute cartoon chef"
       class="chef-img"
     />
@@ -126,23 +132,23 @@
   <section id="menu">
     <h2>Our Menu</h2>
     <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2017/05/07/08/56/pizza-2290425_960_720.png" alt="Pizza" />
+      <img src="https://cdn.pixabay.com/photo/2017/05/07/08/56/pizza-2290425_1280.png" alt="Pizza" />
       <span>Pizza - Classic & Veggie</span>
     </div>
     <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2016/11/29/04/27/noodles-1868728_960_720.png" alt="Chowmein" />
+      <img src="https://cdn.pixabay.com/photo/2016/11/29/04/27/noodles-1868728_1280.png" alt="Chowmein" />
       <span>Chinese Chowmein</span>
     </div>
     <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2018/01/15/07/51/pasta-3082831_960_720.png" alt="Pasta" />
+      <img src="https://cdn.pixabay.com/photo/2018/01/15/07/51/pasta-3082831_1280.png" alt="Pasta" />
       <span>Delicious Pasta</span>
     </div>
     <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2017/01/30/14/32/cupcake-2025050_960_720.png" alt="Pastries" />
+      <img src="https://cdn.pixabay.com/photo/2017/01/30/14/32/cupcake-2025050_1280.png" alt="Pastries" />
       <span>Fresh Pastries & Cupcakes</span>
     </div>
     <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2017/06/02/18/24/salad-2368679_960_720.png" alt="Healthy Food" />
+      <img src="https://cdn.pixabay.com/photo/2017/06/02/18/24/salad-2368679_1280.png" alt="Healthy Food" />
       <span>Healthy Bites & Salads</span>
     </div>
   </section>
