--- a/index.html
+++ b/index.html
@@ -35,45 +35,44 @@
     nav a:hover {
       text-decoration: underline;
     }
-    .main, section {
+    .main {
       text-align: center;
       padding: 40px 20px;
-      max-width: 900px;
-      margin: 0 auto;
     }
-    .chef-img {
-      width: 180px;
+    .main img.chef {
+      width: 200px;
       border-radius: 50%;
       border: 5px dotted #ff69b4;
       margin-bottom: 20px;
     }
-    h2 {
-      font-size: 2em;
+    .section {
+      margin: 40px auto;
+      max-width: 900px;
+      text-align: center;
+    }
+    .section h2 {
       color: #ff1493;
-      margin-bottom: 20px;
+      font-size: 2em;
+      margin-bottom: 15px;
     }
-    p {
-      font-size: 1.2em;
-      max-width: 600px;
-      margin: 0 auto 30px auto;
+    .images-row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 15px;
     }
-    .menu-item {
-      display: inline-block;
-      width: 160px;
-      margin: 15px;
-      vertical-align: top;
-    }
-    .menu-item img {
-      width: 150px;
-      height: 150px;
+    .images-row img {
+      width: 180px;
+      height: 120px;
+      object-fit: cover;
       border-radius: 15px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 6px rgba(255, 105, 180, 0.5);
+      cursor: pointer;
+      transition: transform 0.3s ease;
     }
-    .menu-item span {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
-      color: #c71585;
+    .images-row img:hover {
+      transform: scale(1.1);
     }
     footer {
       background-color: #ff69b4;
@@ -85,6 +84,13 @@
       bottom: 0;
       width: 100%;
     }
+    .home-icon {
+      margin-right: 10px;
+      vertical-align: middle;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -92,78 +98,56 @@
     🌟 Shakes 'n' Bakes 🌟
   </header>
   <nav>
-    <a href="#home">Home 🏠</a>
+    <a href="#home"><img class="home-icon" src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="Home" /> Home</a>
     <a href="#menu">Menu</a>
     <a href="#price">Price</a>
     <a href="#contact">Contact</a>
     <a href="#suggestion">Suggestion</a>
   </nav>
 
-  <section id="home" class="main">
-    <img class="chef-img" src="https://cdn.pixabay.com/photo/2016/03/31/18/55/cooking-1296206_1280.png" alt="Cute cartoon chef" />
+  <div id="home" class="main">
+    <img class="chef" src="images/chef.jpg" alt="Chef Image" />
     <h2>Welcome to Shakes 'n' Bakes!</h2>
     <p>
-      We're your go-to place for yummy snacks, pastries, chowmein, pizza, pasta, and healthy bites — all served with love and a dash of cartoon magic! 
+      We're your go-to place for yummy snacks, pastries, chowmein, pizza, pasta,
+      and healthy bites — all served with love and a dash of cartoon magic!
       This project is proudly presented by <strong>Akshara Kaushik</strong>.
     </p>
-  </section>
+  </div>
 
-  <section id="menu">
-    <h2>Our Menu</h2>
-    <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2017/05/07/08/56/pizza-2290425_1280.png" alt="Pizza" />
-      <span>Pizza - Classic & Veggie</span>
+  <div id="menu" class="section">
+    <h2>Our Delicious Menu</h2>
+    <div class="images-row">
+      <img src="images/chowmein.jpg" alt="Chowmein" title="Chowmein" />
+      <img src="images/pizza.jpg" alt="Pizza" title="Pizza" />
+      <img src="images/pasta.jpg" alt="Pasta" title="Pasta" />
+      <img src="images/pastriesandcupcakes.jpg" alt="Pastries and Cupcakes" title="Pastries and Cupcakes" />
+      <img src="images/healthybitesandsalads.jpg" alt="Healthy Bites and Salads" title="Healthy Bites and Salads" />
     </div>
-    <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2016/11/29/04/27/noodles-1868728_1280.png" alt="Chowmein" />
-      <span>Chinese Chowmein</span>
-    </div>
-    <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2018/01/15/07/51/pasta-3082831_1280.png" alt="Pasta" />
-      <span>Delicious Pasta</span>
-    </div>
-    <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2017/01/30/14/32/cupcake-2025050_1280.png" alt="Pastries" />
-      <span>Fresh Pastries & Cupcakes</span>
-    </div>
-    <div class="menu-item">
-      <img src="https://cdn.pixabay.com/photo/2017/06/02/18/24/salad-2368679_1280.png" alt="Healthy Food" />
-      <span>Healthy Bites & Salads</span>
-    </div>
-  </section>
+  </div>
 
-  <section id="price">
+  <div id="price" class="section">
     <h2>Price List</h2>
-    <p>All our snacks and meals are affordable and made fresh daily! Here’s a sample:</p>
-    <ul style="list-style:none; font-size: 1.2em; max-width: 400px; margin: auto; padding: 0;">
-      <li>🍕 Pizza - ₹150</li>
-      <li>🍜 Chowmein - ₹100</li>
-      <li>🍝 Pasta - ₹130</li>
-      <li>🧁 Pastries & Cupcakes - ₹80</li>
-      <li>🥗 Healthy Salads - ₹90</li>
-    </ul>
-  </section>
+    <p>
+      Chowmein: ₹100<br />
+      Pizza: ₹250<br />
+      Pasta: ₹180<br />
+      Pastries and Cupcakes: ₹120<br />
+      Healthy Bites and Salads: ₹150<br />
+    </p>
+  </div>
 
-  <section id="contact">
+  <div id="contact" class="section">
     <h2>Contact Us</h2>
     <p>Email: shakesnbakes@example.com</p>
     <p>Phone: +91 98765 43210</p>
-    <p>Address: 123 Food Street, Flavor Town</p>
-  </section>
+    <p>Address: 123 Delicious St, Food City</p>
+  </div>
 
-  <section id="suggestion">
-    <h2>Suggestions & Feedback</h2>
-    <p>We love hearing from you! Please send us your suggestions to improve our menu and services.</p>
-    <form style="max-width: 400px; margin: 0 auto; text-align: left;">
-      <label for="name">Name:</label><br />
-      <input type="text" id="name" name="name" style="width:100%; margin-bottom:10px;" /><br />
-      <label for="message">Message:</label><br />
-      <textarea id="message" name="message" rows="4" style="width:100%; margin-bottom:10px;"></textarea><br />
-      <button type="submit" style="background:#ff69b4; color:white; border:none; padding:10px 20px; cursor:pointer; font-weight:bold;">
-        Send
-      </button>
-    </form>
-  </section>
+  <div id="suggestion" class="section">
+    <h2>Suggestions</h2>
+    <p>We'd love to hear your thoughts! Please send your suggestions to <strong>shakesnbakes@example.com</strong>.</p>
+  </div>
 
   <footer>
     &copy; 2025 Shakes 'n' Bakes | Created with love for school project by Akshara Kaushik 🌺
